add all element and start fill

--- a/index.html
+++ b/index.html
@@ -4,13 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Art gallery website</title>
+    <!-- font section -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;900&display=swap" rel="stylesheet"> 
+
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
 
 
 </head>
 <body>
     <main>
-        
+        <div  >
+            <img src="/image/mobile/image-hero.jpg" alt="picture-Gallery">
+            <div class="first-section">
+                <h1 class="heading-1">MODERN ART GALLERY</h1>
+                <p class="text1">The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
+                <button>OUR LOCATION</button>
+            </div>
+            <div>
+                <img src="/image/mobile/image-grid-1.jpg" alt="picture-Gallery">
+                <h2>Your Day at the Gallery</h2>
+                <p class="text1">Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.</p>
+    
+            </div>
+            <img src="/image/mobile/image-grid-2.jpg" alt="second picture-Gallery">
+            <img src="/image/mobile/image-grid-3.jpg" alt="third picture-Gallery">
+
+        </div>
     </main>
 </body>
 </html>
