--- a/index.html
+++ b/index.html
@@ -17,23 +17,34 @@
 </head>
 <body>
     <main>
-        <div  >
+        <div  class="all-thing">
             <img src="/image/mobile/image-hero.jpg" alt="picture-Gallery">
             <div class="first-section">
                 <h1 class="heading-1">MODERN ART GALLERY</h1>
                 <p class="text1">The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
-                <button>OUR LOCATION</button>
+                <div class="button-icon">
+                    <button>OUR LOCATION</button>
+                    <img  src="/image/icon-right.svg" alt="icone">
+                </div>    
             </div>
-            <div>
+            <div class="second-section">
                 <img src="/image/mobile/image-grid-1.jpg" alt="picture-Gallery">
-                <h2>Your Day at the Gallery</h2>
+                <h2 class="heading2">Your Day at the Gallery</h2>
                 <p class="text1">Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.</p>
     
             </div>
             <img src="/image/mobile/image-grid-2.jpg" alt="second picture-Gallery">
             <img src="/image/mobile/image-grid-3.jpg" alt="third picture-Gallery">
+            <div class="last-box">
+                <h2 class="heading-3">COME & BE INSPIRED</h2>
+                <p class="text3">Were excited to welcome you to our gallery and see how our collections influence you.</p>
+            </div>
 
         </div>
+        <footer>
+            <h2 class="footer-title">MODERN ART GALLERY</h2>
+            <p class="footer-p">The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
+        </footer>
     </main>
 </body>
 </html>
