finish first page with mobile version

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/x-icon" href="/image/favicon-32x32.png">
 
 
 </head>
 <body>
     <main>
+        <img src="/image/mobile/image-hero.jpg" alt="picture-Gallery">
         <div  class="all-thing">
-            <img src="/image/mobile/image-hero.jpg" alt="picture-Gallery">
+            
             <div class="first-section">
                 <h1 class="heading-1">MODERN ART GALLERY</h1>
                 <p class="text1">The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
@@ -32,7 +34,7 @@
                 <h2 class="heading2">Your Day at the Gallery</h2>
                 <p class="text1">Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.</p>
     
-            </div>
+            </div >
             <img src="/image/mobile/image-grid-2.jpg" alt="second picture-Gallery">
             <img src="/image/mobile/image-grid-3.jpg" alt="third picture-Gallery">
             <div class="last-box">
@@ -44,6 +46,9 @@
         <footer>
             <h2 class="footer-title">MODERN ART GALLERY</h2>
             <p class="footer-p">The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
+            <img class="twiter" src="/image/icon-twitter.svg" alt="icon-twitter">
+            <img class="twiter" src="/image/icon-facebook.svg" alt="icon-facebook">
+            <img src="/image/icon-instagram.svg" alt="icon-instagram">
         </footer>
     </main>
 </body>
