add location page

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
             <div class="first-section">
                 <h1 class="heading-1">MODERN ART GALLERY</h1>
                 <p class="text1">The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
-                <div class="button-icon">
-                    <button>OUR LOCATION</button>
-                    <img  src="/image/icon-right.svg" alt="icone">
-                </div>    
+                <a href="location.html">
+                    <div class="button-icon">
+                        <button>OUR LOCATION</button>
+                        <img  src="/image/icon-right.svg" alt="icone">
+                    </div>  
+                </a>  
             </div>
             <div class="second-section">
                 <img src="/image/mobile/image-grid-1.jpg" alt="picture-Gallery">
