add new photo and some parametrs

--- a/location.html
+++ b/location.html
@@ -12,11 +12,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;900&display=swap" rel="stylesheet"> 
     <!-- style -->
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/location.css">
     <link rel="icon" type="image/x-icon" href="/image/icon-location.svg">
 
 </head>
 <body>
+    <main>
+        <div>
+            <div class="map">
+                <img class="map-image" src="/image/mobile/image-map.png" alt="image-map">
+                <a href="index.html">
+                    <img src="/image/icone-left.svg" alt="left-icone">
+                    <button>BACK TO HOME</button>
+                </a>
+
+            </div>
+
+        </div>
+        <footer>
+
+        </footer>
+
+
+
+
+    </main>
     
 </body>
 </html>
