--- a/location.html
+++ b/location.html
@@ -17,20 +17,30 @@
 
 </head>
 <body>
-    <main>
-        <div>
+    <main class="body">
+        <!-- first section -->
+        <section class="first-section">
             <div class="map">
                 <img class="map-image" src="/image/mobile/image-map.png" alt="image-map">
                 <a href="index.html">
-                    <img src="/image/icone-left.svg" alt="left-icone">
-                    <button>BACK TO HOME</button>
+                    <img class="image" src="/image/icone-left.svg" alt="left-icone">
+                    <button >BACK TO HOME</button>
                 </a>
-
             </div>
-
-        </div>
+        </section>
+        <!-- section second -->
+        <section class="second">
+            <h1 class="tittle">OUR LOCATION</h1>
+            <h2 class="tittle-2">99 King Street</h2>
+            <p class="paragraph-1">Newport <br> RI 02840 <br> United States of America</p>
+            <p class="paragraph-2">Our newly opened gallery is located near the Edward King House on 99 King Street, the Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm.</p>
+        </section>
         <footer>
-
+            <h2 class="footer-title">MODERN ART GALLERY</h2>
+            <p class="footer-p">The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
+            <img class="icon" src="/image/icon-twitter.svg" alt="icon-twitter">
+            <img class="icon" src="/image/icon-facebook.svg" alt="icon-facebook">
+            <img class="icon" src="/image/icon-instagram.svg" alt="icon-instagram">
         </footer>
 
 
