add location page tablet part

--- a/location.html
+++ b/location.html
@@ -21,20 +21,26 @@
         <!-- first section -->
         <section class="first-section">
             <div class="map">
-                <img class="map-image" src="/image/mobile/image-map.png" alt="image-map">
+                <!-- image mobile -->
+                <img class="map-mobile" src="/image/mobile/image-map.png" alt="map mobile">
+                <!-- image tablet -->
+                <img class="map-tablet" src="/image/tablet/image-map.png" alt="map tablet">
+                <!-- image desktop -->
+                <img class="map-desktop" src="/image/desktop/image-map.png" alt="map desktop">
                 <a href="index.html">
                     <img class="image" src="/image/icone-left.svg" alt="left-icone">
-                    <button >BACK TO HOME</button>
+                    <button class="button" >BACK TO HOME</button>
                 </a>
             </div>
         </section>
-        <!-- section second -->
+        <!-- section second  -->
         <section class="second">
             <h1 class="tittle">OUR LOCATION</h1>
             <h2 class="tittle-2">99 King Street</h2>
             <p class="paragraph-1">Newport <br> RI 02840 <br> United States of America</p>
             <p class="paragraph-2">Our newly opened gallery is located near the Edward King House on 99 King Street, the Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm.</p>
         </section>
+        <!-- footer section -->
         <footer>
             <h2 class="footer-title">MODERN ART GALLERY</h2>
             <p class="footer-p">The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
