finish location page full responsive

--- a/index.html
+++ b/index.html
@@ -18,8 +18,14 @@
 </head>
 <body>
     <main>
-        
-        <img src="/image/mobile/image-hero.jpg" alt="picture-Gallery">
+        <div>
+            <!-- mobile foto -->
+        <img class="mobile-hero" src="/image/mobile/image-hero.jpg" alt="picture-Gallery">
+        <!-- foto tablet -->
+        <img class="tablet-hero" src="/image/tablet/image-hero.jpg" alt="tablet-hero-photo">
+        <!-- photo desktop -->
+        <img class="desktop-hero" src="/image/desktop/image-hero.jpg" alt="desktop-hero-photo">
+        </div>
         <div  class="all-thing">
             
             <div class="first-section">
