--- a/location.html
+++ b/location.html
@@ -35,23 +35,26 @@
         </section>
         <!-- section second  -->
         <section class="second">
+            <div class="tittle-div">
             <h1 class="tittle">OUR LOCATION</h1>
+            </div>
+            <div class="tittle2-div">
             <h2 class="tittle-2">99 King Street</h2>
             <p class="paragraph-1">Newport <br> RI 02840 <br> United States of America</p>
             <p class="paragraph-2">Our newly opened gallery is located near the Edward King House on 99 King Street, the Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm.</p>
+            </div>
         </section>
         <!-- footer section -->
         <footer>
+            
             <h2 class="footer-title">MODERN ART GALLERY</h2>
             <p class="footer-p">The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
-            <img class="icon" src="/image/icon-twitter.svg" alt="icon-twitter">
-            <img class="icon" src="/image/icon-facebook.svg" alt="icon-facebook">
-            <img class="icon" src="/image/icon-instagram.svg" alt="icon-instagram">
+            <div>
+                <img class="icon" src="/image/icon-twitter.svg" alt="icon-twitter">
+                <img class="icon" src="/image/icon-facebook.svg" alt="icon-facebook">
+                <img class="icon" src="/image/icon-instagram.svg" alt="icon-instagram">
+            </div>
         </footer>
-
-
-
-
     </main>
     
 </body>
