--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
                 </a>  
             </div>
             <div class="second-section">
-                <img src="/image/mobile/image-grid-1.jpg" alt="picture-Gallery">
-                <h2 class="heading2">Your Day at the Gallery</h2>
-                <p class="text1">Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.</p>
-    
+                <img class="image-grid" src="/image/mobile/image-grid-1.jpg" alt="picture-Gallery">
+                <div>
+                    <h2 class="heading2">Your Day at the Gallery</h2>
+                    <p class="text1">Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.</p>
+                </div>
             </div >
             <img src="/image/mobile/image-grid-2.jpg" alt="second picture-Gallery">
             <img src="/image/mobile/image-grid-3.jpg" alt="third picture-Gallery">
