add tablet section

--- a/index.html
+++ b/index.html
@@ -38,20 +38,32 @@
                     </div>  
                 </a>  
             </div>
-            <div class="second-section">
-                <img class="image-grid" src="/image/mobile/image-grid-1.jpg" alt="picture-Gallery">
-                <div>
-                    <h2 class="heading2">Your Day at the Gallery</h2>
-                    <p class="text1">Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.</p>
+            <section class="section1">
+                <div class="second-section">
+                    <!-- mobile picture grid  -->
+                    <img class="mobile-first-grid" src="/image/mobile/image-grid-1.jpg" alt="picture-Gallery">
+                    <!-- tablet photo grid -->
+                    <img class="tablet-first-grid" src="/image/tablet/image-grid-1.jpg" alt="picture-Gallery">
+                    <!-- desktop picture grid -->
+                    <img class="desktop-first-grid" src="/image/desktop/image-grid-1.jpg" alt="picture-Gallery">
+                    <div>
+                        <h2 class="heading2">Your Day at the Gallery</h2>
+                        <p class="text1">Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.</p>
+                    </div>
+                </div >
+                <!-- image section second -->
+                <img class="mobile-second-grid" src="/image/mobile/image-grid-2.jpg" alt="second picture-Gallery">
+                <img class="tablet-second-grid" src="/image/tablet/image-grid-2.jpg" alt="second picture-Gallery">
+                <img class="desktop-second-grid" src="/image/desktop/image-grid-2.jpg" alt="second picture-Gallery">
+                <!-- third image section -->
+                <img class="mobile-third-grid" src="/image/mobile/image-grid-3.jpg" alt="third picture-Gallery">
+                <img class="tablet-third-grid" src="/image/tablet/image-grid-3.jpg" alt="third picture-Gallery">
+                <img class="desktop-third-grid" src="/image/desktop/image-grid-3.jpg" alt="third picture-Gallery">
+                <div class="last-box">
+                    <h2 class="heading-3">COME & BE INSPIRED</h2>
+                    <p class="text3">Were excited to welcome you to our gallery and see how our collections influence you.</p>
                 </div>
-            </div >
-            <img src="/image/mobile/image-grid-2.jpg" alt="second picture-Gallery">
-            <img src="/image/mobile/image-grid-3.jpg" alt="third picture-Gallery">
-            <div class="last-box">
-                <h2 class="heading-3">COME & BE INSPIRED</h2>
-                <p class="text3">Were excited to welcome you to our gallery and see how our collections influence you.</p>
-            </div>
-
+            </section>
         </div>
         <footer>
             <h2 class="footer-title">MODERN ART GALLERY</h2>
