end tablet responsive version

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <main>
+    <main class="body">
         <div>
             <!-- mobile foto -->
         <img class="mobile-hero" src="/image/mobile/image-hero.jpg" alt="picture-Gallery">
@@ -68,9 +68,11 @@
         <footer>
             <h2 class="footer-title">MODERN ART GALLERY</h2>
             <p class="footer-p">The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
+            <div>
             <img class="twiter" src="/image/icon-twitter.svg" alt="icon-twitter">
             <img class="twiter" src="/image/icon-facebook.svg" alt="icon-facebook">
             <img src="/image/icon-instagram.svg" alt="icon-instagram">
+            </div>
         </footer>
     </main>
 </body>
