--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
 </head>
 <body>
     <main class="body">
-        <div>
+        <div class="hero">
             <!-- mobile foto -->
         <img class="mobile-hero" src="/image/mobile/image-hero.jpg" alt="picture-Gallery">
         <!-- foto tablet -->
         <img class="tablet-hero" src="/image/tablet/image-hero.jpg" alt="tablet-hero-photo">
         <!-- photo desktop -->
         <img class="desktop-hero" src="/image/desktop/image-hero.jpg" alt="desktop-hero-photo">
+        <div class="div"></div>
         </div>
         <div  class="all-thing">
             
             <div class="first-section">
-                <h1 class="heading-1">MODERN ART GALLERY</h1>
-                <p class="text1">The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
+                <h1 class="heading-1">MODERN <br> ART GAL<span>LERY</span>
+                </h1>
+                <p class="text11">The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these pieces inspire you? Visit us and find out.</p>
                 <a href="location.html">
                     <div class="button-icon">
                         <button>OUR LOCATION</button>
@@ -46,7 +48,7 @@
                     <img class="tablet-first-grid" src="/image/tablet/image-grid-1.jpg" alt="picture-Gallery">
                     <!-- desktop picture grid -->
                     <img class="desktop-first-grid" src="/image/desktop/image-grid-1.jpg" alt="picture-Gallery">
-                    <div>
+                    <div >
                         <h2 class="heading2">Your Day at the Gallery</h2>
                         <p class="text1">Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.</p>
                     </div>
@@ -66,7 +68,7 @@
             </section>
         </div>
         <footer>
-            <h2 class="footer-title">MODERN ART GALLERY</h2>
+            <h2 class="footer-title">MODERN <br> ART GALLERY</h2>
             <p class="footer-p">The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
             <div>
             <img class="twiter" src="/image/icon-twitter.svg" alt="icon-twitter">
