--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;900&display=swap" rel="stylesheet"> 
 
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/x-icon" href="/image/favicon-32x32.png">
 
 
@@ -39,7 +39,8 @@
                         <img  src="/image/icon-right.svg" alt="icone">
                     </div>  
                 </a>  
-            </div>
+            </div> 
+
             <section class="section1">
                 <div class="second-section">
                     <!-- mobile picture grid  -->
