--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/x-icon" href="/image/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="image/favicon-32x32.png">
 
 
 </head>
@@ -20,11 +20,11 @@
     <main class="body">
         <div class="hero">
             <!-- mobile foto -->
-        <img class="mobile-hero" src="/image/mobile/image-hero.jpg" alt="picture-Gallery">
+        <img class="mobile-hero" src="image/mobile/image-hero.jpg" alt="picture-Gallery">
         <!-- foto tablet -->
-        <img class="tablet-hero" src="/image/tablet/image-hero.jpg" alt="tablet-hero-photo">
+        <img class="tablet-hero" src="image/tablet/image-hero.jpg" alt="tablet-hero-photo">
         <!-- photo desktop -->
-        <img class="desktop-hero" src="/image/desktop/image-hero.jpg" alt="desktop-hero-photo">
+        <img class="desktop-hero" src="image/desktop/image-hero.jpg" alt="desktop-hero-photo">
         <div class="div"></div>
         </div>
         <div  class="all-thing">
@@ -36,7 +36,7 @@
                 <a href="location.html">
                     <div class="button-icon">
                         <button>OUR LOCATION</button>
-                        <img  src="/image/icon-right.svg" alt="icone">
+                        <img  src="image/icon-right.svg" alt="icone">
                     </div>  
                 </a>  
             </div> 
@@ -44,24 +44,24 @@
             <section class="section1">
                 <div class="second-section">
                     <!-- mobile picture grid  -->
-                    <img class="mobile-first-grid" src="/image/mobile/image-grid-1.jpg" alt="picture-Gallery">
+                    <img class="mobile-first-grid" src="image/mobile/image-grid-1.jpg" alt="picture-Gallery">
                     <!-- tablet photo grid -->
-                    <img class="tablet-first-grid" src="/image/tablet/image-grid-1.jpg" alt="picture-Gallery">
+                    <img class="tablet-first-grid" src="image/tablet/image-grid-1.jpg" alt="picture-Gallery">
                     <!-- desktop picture grid -->
-                    <img class="desktop-first-grid" src="/image/desktop/image-grid-1.jpg" alt="picture-Gallery">
+                    <img class="desktop-first-grid" src="image/desktop/image-grid-1.jpg" alt="picture-Gallery">
                     <div >
                         <h2 class="heading2">Your Day at the Gallery</h2>
                         <p class="text1">Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.</p>
                     </div>
                 </div >
                 <!-- image section second -->
-                <img class="mobile-second-grid" src="/image/mobile/image-grid-2.jpg" alt="second picture-Gallery">
-                <img class="tablet-second-grid" src="/image/tablet/image-grid-2.jpg" alt="second picture-Gallery">
-                <img class="desktop-second-grid" src="/image/desktop/image-grid-2.jpg" alt="second picture-Gallery">
+                <img class="mobile-second-grid" src="image/mobile/image-grid-2.jpg" alt="second picture-Gallery">
+                <img class="tablet-second-grid" src="image/tablet/image-grid-2.jpg" alt="second picture-Gallery">
+                <img class="desktop-second-grid" src="image/desktop/image-grid-2.jpg" alt="second picture-Gallery">
                 <!-- third image section -->
-                <img class="mobile-third-grid" src="/image/mobile/image-grid-3.jpg" alt="third picture-Gallery">
-                <img class="tablet-third-grid" src="/image/tablet/image-grid-3.jpg" alt="third picture-Gallery">
-                <img class="desktop-third-grid" src="/image/desktop/image-grid-3.jpg" alt="third picture-Gallery">
+                <img class="mobile-third-grid" src="image/mobile/image-grid-3.jpg" alt="third picture-Gallery">
+                <img class="tablet-third-grid" src="image/tablet/image-grid-3.jpg" alt="third picture-Gallery">
+                <img class="desktop-third-grid" src="image/desktop/image-grid-3.jpg" alt="third picture-Gallery">
                 <div class="last-box">
                     <h2 class="heading-3">COME & BE INSPIRED</h2>
                     <p class="text3">Were excited to welcome you to our gallery and see how our collections influence you.</p>
@@ -72,9 +72,9 @@
             <h2 class="footer-title">MODERN <br> ART GALLERY</h2>
             <p class="footer-p">The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
             <div>
-            <img class="twiter" src="/image/icon-twitter.svg" alt="icon-twitter">
-            <img class="twiter" src="/image/icon-facebook.svg" alt="icon-facebook">
-            <img src="/image/icon-instagram.svg" alt="icon-instagram">
+            <img class="twiter" src="image/icon-twitter.svg" alt="icon-twitter">
+            <img class="twiter" src="image/icon-facebook.svg" alt="icon-facebook">
+            <img src="image/icon-instagram.svg" alt="icon-instagram">
             </div>
         </footer>
     </main>
