--- a/location.html
+++ b/location.html
@@ -11,9 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;900&display=swap" rel="stylesheet"> 
     <!-- style -->
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/location.css">
-    <link rel="icon" type="image/x-icon" href="/image/icon-location.svg">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/location.css">
+    <link rel="icon" type="image/x-icon" href="image/icon-location.svg">
 
 </head>
 <body>
@@ -22,13 +22,13 @@
         <section class="first-section">
             <div class="map">
                 <!-- image mobile -->
-                <img class="map-mobile" src="/image/mobile/image-map.png" alt="map mobile">
+                <img class="map-mobile" src="image/mobile/image-map.png" alt="map mobile">
                 <!-- image tablet -->
-                <img class="map-tablet" src="/image/tablet/image-map.png" alt="map tablet">
+                <img class="map-tablet" src="image/tablet/image-map.png" alt="map tablet">
                 <!-- image desktop -->
-                <img class="map-desktop" src="/image/desktop/image-map.png" alt="map desktop">
+                <img class="map-desktop" src="image/desktop/image-map.png" alt="map desktop">
                 <a href="index.html">
-                    <img class="image" src="/image/icone-left.svg" alt="left-icone">
+                    <img class="image" src="image/icone-left.svg" alt="left-icone">
                     <button class="button" >BACK TO HOME</button>
                 </a>
             </div>
@@ -50,9 +50,9 @@
             <h2 class="footer-title">MODERN ART GALLERY</h2>
             <p class="footer-p">The Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm. Find us at 99 King Street, Newport, USA.</p>
             <div>
-                <img class="icon" src="/image/icon-twitter.svg" alt="icon-twitter">
-                <img class="icon" src="/image/icon-facebook.svg" alt="icon-facebook">
-                <img class="icon" src="/image/icon-instagram.svg" alt="icon-instagram">
+                <img class="icon" src="image/icon-twitter.svg" alt="icon-twitter">
+                <img class="icon" src="image/icon-facebook.svg" alt="icon-facebook">
+                <img class="icon" src="image/icon-instagram.svg" alt="icon-instagram">
             </div>
         </footer>
     </main>
